Added Redis, MS SQL Srvr and Elasticsearch support in the Abstraction layer
