# generated/java/api/openapi.yaml
@@ -904,6 +904,7 @@ components:
                 server_address: server_address
               generate_token: true
               install_software: true
+              snapshot_repository: snapshot_repository
               ssh_port: ssh_port
               topology:
                 master_slave_links:
@@ -947,6 +948,7 @@ components:
               compression: true
               build_from_source: true
               verify_backup_delay: 6
+              snapshot_locaiton: snapshot_locaiton
               bootstrap: true
               extended: true
               mongos_servers:
@@ -988,6 +990,7 @@ components:
               overwrite_mysqlchk: true
               backup_mysqldump_type: Complete
               node_type: 7
+              storage_host: storage_host
               with_tags:
               - with_tags
               - with_tags
@@ -1090,10 +1093,12 @@ components:
                 datadir: datadir
                 synchronous: true
                 ip: ip
+                roles: master
                 backup_dir: backup_dir
                 acl: acl
                 clusterid: 5
                 hostname: hostname
+                protocol: elastic
                 cdt_path: cdt_path
                 port: port
                 maintenance_mode_active: true
@@ -1108,10 +1113,12 @@ components:
                 datadir: datadir
                 synchronous: true
                 ip: ip
+                roles: master
                 backup_dir: backup_dir
                 acl: acl
                 clusterid: 5
                 hostname: hostname
+                protocol: elastic
                 cdt_path: cdt_path
                 port: port
                 maintenance_mode_active: true
@@ -2084,10 +2091,12 @@ components:
         datadir: datadir
         synchronous: true
         ip: ip
+        roles: master
         backup_dir: backup_dir
         acl: acl
         clusterid: 5
         hostname: hostname
+        protocol: elastic
         cdt_path: cdt_path
         port: port
         maintenance_mode_active: true
@@ -2102,6 +2111,8 @@ components:
           - CmonHost
           - CmonPBMAgentHost
           - CmonPgBouncerHost
+          - CmonMsSqlHost
+          - CmonElasticHost
           type: string
         cdt_path:
           type: string
@@ -2139,6 +2150,16 @@ components:
           type: string
         synchronous:
           type: boolean
+        protocol:
+          enum:
+          - elastic
+          type: string
+        roles:
+          enum:
+          - master
+          - data
+          - master-data
+          type: string
       type: object
     Jobs_job_job_spec_job_data_node_adresses_inner:
       example:
@@ -2262,6 +2283,7 @@ components:
           server_address: server_address
         generate_token: true
         install_software: true
+        snapshot_repository: snapshot_repository
         ssh_port: ssh_port
         topology:
           master_slave_links:
@@ -2305,6 +2327,7 @@ components:
         compression: true
         build_from_source: true
         verify_backup_delay: 6
+        snapshot_locaiton: snapshot_locaiton
         bootstrap: true
         extended: true
         mongos_servers:
@@ -2346,6 +2369,7 @@ components:
         overwrite_mysqlchk: true
         backup_mysqldump_type: Complete
         node_type: 7
+        storage_host: storage_host
         with_tags:
         - with_tags
         - with_tags
@@ -2448,10 +2472,12 @@ components:
           datadir: datadir
           synchronous: true
           ip: ip
+          roles: master
           backup_dir: backup_dir
           acl: acl
           clusterid: 5
           hostname: hostname
+          protocol: elastic
           cdt_path: cdt_path
           port: port
           maintenance_mode_active: true
@@ -2466,10 +2492,12 @@ components:
           datadir: datadir
           synchronous: true
           ip: ip
+          roles: master
           backup_dir: backup_dir
           acl: acl
           clusterid: 5
           hostname: hostname
+          protocol: elastic
           cdt_path: cdt_path
           port: port
           maintenance_mode_active: true
@@ -2718,6 +2746,12 @@ components:
           type: string
         bootstrap:
           type: boolean
+        snapshot_locaiton:
+          type: string
+        snapshot_repository:
+          type: string
+        storage_host:
+          type: string
         upload_backup_data_to_cloud_storage:
           $ref: '#/components/schemas/Jobs_job_job_spec_job_data_upload_backup_data_to_cloud_storage'
         verify_backup:
@@ -2784,6 +2818,7 @@ components:
             server_address: server_address
           generate_token: true
           install_software: true
+          snapshot_repository: snapshot_repository
           ssh_port: ssh_port
           topology:
             master_slave_links:
@@ -2827,6 +2862,7 @@ components:
           compression: true
           build_from_source: true
           verify_backup_delay: 6
+          snapshot_locaiton: snapshot_locaiton
           bootstrap: true
           extended: true
           mongos_servers:
@@ -2868,6 +2904,7 @@ components:
           overwrite_mysqlchk: true
           backup_mysqldump_type: Complete
           node_type: 7
+          storage_host: storage_host
           with_tags:
           - with_tags
           - with_tags
@@ -2970,10 +3007,12 @@ components:
             datadir: datadir
             synchronous: true
             ip: ip
+            roles: master
             backup_dir: backup_dir
             acl: acl
             clusterid: 5
             hostname: hostname
+            protocol: elastic
             cdt_path: cdt_path
             port: port
             maintenance_mode_active: true
@@ -2988,10 +3027,12 @@ components:
             datadir: datadir
             synchronous: true
             ip: ip
+            roles: master
             backup_dir: backup_dir
             acl: acl
             clusterid: 5
             hostname: hostname
+            protocol: elastic
             cdt_path: cdt_path
             port: port
             maintenance_mode_active: true
@@ -3071,6 +3112,7 @@ components:
               server_address: server_address
             generate_token: true
             install_software: true
+            snapshot_repository: snapshot_repository
             ssh_port: ssh_port
             topology:
               master_slave_links:
@@ -3114,6 +3156,7 @@ components:
             compression: true
             build_from_source: true
             verify_backup_delay: 6
+            snapshot_locaiton: snapshot_locaiton
             bootstrap: true
             extended: true
             mongos_servers:
@@ -3155,6 +3198,7 @@ components:
             overwrite_mysqlchk: true
             backup_mysqldump_type: Complete
             node_type: 7
+            storage_host: storage_host
             with_tags:
             - with_tags
             - with_tags
@@ -3257,10 +3301,12 @@ components:
               datadir: datadir
               synchronous: true
               ip: ip
+              roles: master
               backup_dir: backup_dir
               acl: acl
               clusterid: 5
               hostname: hostname
+              protocol: elastic
               cdt_path: cdt_path
               port: port
               maintenance_mode_active: true
@@ -3275,10 +3321,12 @@ components:
               datadir: datadir
               synchronous: true
               ip: ip
+              roles: master
               backup_dir: backup_dir
               acl: acl
               clusterid: 5
               hostname: hostname
+              protocol: elastic
               cdt_path: cdt_path
               port: port
               maintenance_mode_active: true
